      particularly with self-referential comparisons. [ticket:1171]
      
    - Fixed bug involving primaryjoin/secondaryjoin conditions
      constructed from class-bound attributes (as often occurs 
      when using declarative), which later would be inappropriately 
      aliased by Query, particularly with the various EXISTS
      based comparators.
      
    - Improved weakref identity map memory management to no longer
      require mutexing, resurrects garbage collected instance on a
      lazy basis for an InstanceState with pending changes.

    - relation() won't hide unrelated ForeignKey errors inside of
      the "please specify primaryjoin" message when determining join
      condition.

    - When using Query.join() with an explicit clause for the ON
      clause, the clause will be aliased in terms of the left side
      of the join, allowing scenarios like query(Source).
      from_self().join((Dest, Source.id==Dest.source_id)) to work
      properly.

    - polymorphic_union() function respects the "key" of each Column
      if they differ from the column's name.

    - Repaired support for "passive-deletes" on a many-to-one
      relation() with "delete" cascade. [ticket:1183]

    - Added more granularity to internal attribute access, such that
      cascade and flush operations will not initialize unloaded
      attributes and collections, leaving them intact for a
      lazy-load later on.  Backref events still initialize attrbutes
      and collections for pending instances.  [ticket:1202]

    - InstanceState object now removes circular references to itself
      upon disposal to keep it outside of cyclic garbage collection.

- sql
    - Further simplified SELECT compilation and its relationship to
      result row processing.

    - Direct execution of a union() construct will properly set up
      result-row processing. [ticket:1194]

    - The internal notion of an "OID" or "ROWID" column has been