@@ -886,12 +886,14 @@ class Query(object):
                 if isinstance(onclause, sql.ClauseElement):
                     onclause = right_adapter.traverse(onclause)
 
-            if prop:
-                # MapperProperty based onclause
-                onclause = prop
-            else:
-                # ClauseElement based onclause
-                onclause = self._adapt_clause(onclause, False, True)
+            # TODO: is this a little hacky ?
+            if not isinstance(onclause, attributes.QueryableAttribute) or not isinstance(onclause.parententity, AliasedClass):
+                if prop:
+                    # MapperProperty based onclause
+                    onclause = prop
+                else:
+                    # ClauseElement based onclause
+                    onclause = self._adapt_clause(onclause, False, True)
                 
             clause = orm_join(clause, right_entity, onclause, isouter=outerjoin)
             if alias_criterion:
